--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="topnav" id="myTopnav">
         <a href="#home" class="active">J.O Nilsson</a>
-        <a href="#Portfolio">Portfolio</a>
         <a href="#hero-section">About</a>
+        <a href="#portfolio-section">Portfolio</a>
         <a href="#contact">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
@@ -26,22 +26,52 @@
     <div class="page-container">
         <div id="hero-section">
             <div class="hero-introduction">
-                <h2>Hi, I'm Joel!</h2>
-                <p>Junior webdeveloper based in Stockholm, Sweden.</p>
+                <h2>Hi, I'm <span id="text-highlight">Joel</span>!</h2>
+                <p>Junior webdeveloper focused on front-end design.</p>
             </div>
             <div class="hero-logos">
-                <i class="fa-brands fa-html5 fa-5x fa-fade" style="--fa-animation-duration: 1.7s; --fa-fade-opacity: 0.6;"></i>
-                <i class="fa-brands fa-css3-alt fa-5x fa-fade" style="--fa-animation-duration: 1.8s; --fa-fade-opacity: 0.6;"></i>
-                <i class="fa-brands fa-js fa-5x fa-fade" style="--fa-animation-duration: 1.9s; --fa-fade-opacity: 0.6;"></i>
+                <i class="fa-brands fa-html5 fa-5x fa-fade"
+                    style="--fa-animation-duration: 1.7s; --fa-fade-opacity: 0.6;"></i>
+                <i class="fa-brands fa-css3-alt fa-5x fa-fade"
+                    style="--fa-animation-duration: 1.8s; --fa-fade-opacity: 0.6;"></i>
+                <i class="fa-brands fa-js fa-5x fa-fade"
+                    style="--fa-animation-duration: 1.9s; --fa-fade-opacity: 0.6;"></i>
             </div>
         </div>
 
-        <div class="portfolio-section">
-            <div class="case">
-                <div class="case-image"></div>
-                <div class="case-summary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi fugiat
-                    voluptatem suscipit pariatur, labore quod tempora incidunt reiciendis obcaecati quas officia maxime
-                    perferendis! Assumenda itaque adipisci velit cupiditate iure ex!</div>
+        <div id="portfolio-section">
+            <h2><span id="text-highlight">My</span> work</h2>
+            <div class="case-container">
+                <div class="case">
+                    <h3>Project name</h3>
+                    <div class="case-image"></div>
+                    <div class="case-summary">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi fugiat
+                            voluptatem suscipit pariatur, labore quod tempora incidunt reiciendis obcaecati quas officia
+                            maxime
+                            perferendis! Assumenda itaque adipisci velit cupiditate iure ex!</p>
+                    </div>
+                </div>
+                <div class="case">
+                    <h3>Project name</h3>
+                    <div class="case-image"></div>
+                    <div class="case-summary">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi fugiat
+                            voluptatem suscipit pariatur, labore quod tempora incidunt reiciendis obcaecati quas officia
+                            maxime
+                            perferendis! Assumenda itaque adipisci velit cupiditate iure ex!</p>
+                    </div>
+                </div>
+                <div class="case">
+                    <h3>Project name</h3>
+                    <div class="case-image"></div>
+                    <div class="case-summary">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi fugiat
+                            voluptatem suscipit pariatur, labore quod tempora incidunt reiciendis obcaecati quas officia
+                            maxime
+                            perferendis! Assumenda itaque adipisci velit cupiditate iure ex!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
