--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link rel="stylesheet" href="style.css">
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script defer src="script.js"></script>
     <script src="https://kit.fontawesome.com/5c4961de5d.js" crossorigin="anonymous"></script>
+
 
 </head>
 
 <body>
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">J.O Nilsson</a>
+        <a href="#home" class="active"><i class="fa-solid fa-code"></i></a>
         <a href="#hero-section">About</a>
         <a href="#portfolio-section">Portfolio</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact-section">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
@@ -27,8 +29,10 @@
         <div id="hero-section">
             <div class="hero-introduction">
                 <h2>Hi, I'm <span id="text-highlight">Joel</span>!</h2>
-                <p>Junior webdeveloper focused on front-end design.</p>
+                <p>Beginner webdeveloper @ <a href="https://www.theodinproject.com/" target="_blank">The Odin
+                        Project</a>.</p>
             </div>
+
             <div class="hero-logos">
                 <i class="fa-brands fa-html5 fa-5x fa-fade"
                     style="--fa-animation-duration: 1.7s; --fa-fade-opacity: 0.6;"></i>
@@ -74,10 +78,14 @@
                 </div>
             </div>
         </div>
+        <div id="contact-section">
+            <h2>Contact section under construction</h2>
+            <div class="contact-box">This is a contact box</div>
+        </div>
+        <footer><a href="https://github.com/joelbit33" target="_blank">
+                <p>Joelbit33 @ GitHub</p>
+            </a></footer>
     </div>
-
-
-    <script src="script.js"></script>
 </body>
 
 </html>
