Update Hero text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="hero-section">
             <div class="hero-introduction">
                 <h2>Hi, I'm <span id="text-highlight">Joel</span>!</h2>
-                <p>Beginner webdeveloper @ <a href="https://www.theodinproject.com/" target="_blank">The Odin
+                <p>Webdeveloper Student @ <a href="https://www.theodinproject.com/" target="_blank">The Odin
                         Project</a>.</p>
             </div>
 
